--- a/production/files/v2.5.html
+++ b/production/files/v2.5.html
@@ -6,24 +6,26 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BN5JC7B3SH"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-BN5JC7B3SH');
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "G-BN5JC7B3SH");
   </script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Enhance your skills with TypeBlitz, the innovative learning app. Download the latest version (v1.2) now for an immersive learning experience.">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="keywords" content="skill improvement, learning, development, Sarwan Yadav, Download the latest version">
-  <meta name="author" content="Sarwan Yadav">
-  <meta name="theme-color" content="#RRGGBB">
+    content="Enhance your skills with TypeBlitz, the innovative learning app. Download the latest version (v1.2) now for an immersive learning experience." />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="keywords" content="skill improvement, learning, development, Sarwan Yadav, Download the latest version" />
+  <meta name="author" content="Sarwan Yadav" />
+  <meta name="theme-color" content="#RRGGBB" />
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <title>Download TypeBlitz: v2.5</title>
   <style>
     body {
-      background-color: #F0F8FF;
+      background-color: #f0f8ff;
     }
 
     /* Additional CSS for a more designful download button */
@@ -32,14 +34,14 @@
       padding: 15px 30px;
       font-size: 1.2em;
       text-decoration: none;
-      background: linear-gradient(45deg, #4CAF50, #0076CE);
+      background: linear-gradient(45deg, #4caf50, #0076ce);
       color: #fff;
       border-radius: 8px;
       transition: background 0.3s ease, filter 0.3s ease;
     }
 
     #download a:hover {
-      background: linear-gradient(45deg, #0076CE, #4CAF50);
+      background: linear-gradient(45deg, #0076ce, #4caf50);
       filter: blur(2px);
     }
 
@@ -53,48 +55,62 @@
 
 <body>
   <div class="container mt-5" id="container">
-    <h1 class="text-center mb-5">Upgrade Your Typing Skills with TypeBlitz</h1>
+    <h1 class="text-center mb-5">
+      Upgrade Your Typing Skills with TypeBlitz
+    </h1>
     <div class="row">
       <div class="col-md-8 offset-md-2">
         <div class="card">
-          <div class="card-header">
-            Version Information
-          </div>
+          <div class="card-header">Version Information</div>
           <div class="card-body">
-            <p><strong>Version:</strong> 2.5 </p>
+            <p><strong>Version:</strong> 2.5</p>
             <p><strong>User Interface (UI):</strong> 2.2</p>
             <p><strong>Release Date:</strong> June 15, 2024</p>
             <p><strong>File Size:</strong> 35 MB (approx)</p>
           </div>
         </div>
         <div class="card mt-4">
-          <div class="card-header">
-            About This Version
-          </div>
+          <div class="card-header">About This Version</div>
           <div class="card-body">
             <ul>
               <li><b>App Updator:</b></li>
               <ul>
-                <li>Code correction, optimization, and bug fixes for future error prevention.</li>
-                <li>Enhanced overall performance and functionality of the updator.</li>
+                <li>
+                  Code correction, optimization, and bug fixes for future
+                  error prevention.
+                </li>
+                <li>
+                  Enhanced overall performance and functionality of the
+                  updator.
+                </li>
               </ul>
-              <li><b>Improved app performance and bug-free experience:</b></li>
+              <li>
+                <b>Improved app performance and bug-free experience:</b>
+              </li>
               <ul>
-                <li>Updates will be rolled out systematically throughout the year.</li>
+                <li>
+                  Updates will be rolled out systematically throughout the
+                  year.
+                </li>
               </ul>
               <li><b>Commitment to Continuous Improvement:</b></li>
               <ul>
-                <li>Your feedback drives us to make TypeBlitz the premier learning platform.</li>
+                <li>
+                  Your feedback drives us to make TypeBlitz the premier
+                  learning platform.
+                </li>
               </ul>
               <li><b>Thank You for Choosing TypeBlitz:</b></li>
               <ul>
                 <li>We express our gratitude for choosing TypeBlitz!</li>
-                <li>We look forward to providing you with an even better learning experience.</li>
+                <li>
+                  We look forward to providing you with an even better
+                  learning experience.
+                </li>
               </ul>
             </ul>
           </div>
         </div>
-
 
         <div class="text-center mt-4 mb-5" id="download">
           <a href="https://typeblitz.tech/production/files/v2.5/TypeBlitz%20-%20Setup.exe">Download App</a>
@@ -146,7 +162,7 @@
 
   <script>
     // Clear localStorage before closing the website
-    window.addEventListener('beforeunload', function () {
+    window.addEventListener("beforeunload", function () {
       window.localStorage.clear();
     });
   </script>
@@ -154,7 +170,6 @@
   <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
       referrerpolicy="no-referrer-when-downgrade" /></noscript>
-
 </body>
 
 </html>
