--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
   <meta name="theme-color" content="#000000" />
   <meta name="content-language" content="en-US" />
   <!-- Open Graph Meta Tags -->
-  <meta property="og:url" content="https://typeblitz.tech/" />
-  <meta property="og:url" content="https://typeblitz.netlify.app/" />
-  <meta property="og:title" content="TypeBlitz Official Website" />
-  <meta property="og:description" content="Enhance your typing skills and increase your speed with TypeBlitz" />
+  <meta property="og:url" content="https://typeblitz.tech/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="TypeBlitz Official Website">
+  <meta property="og:description"
+    content="Enhance your typing skills and increase your speed with TypeBlitz. Learn typing techniques and practice to improve your accuracy and speed.">
+  <meta property="og:image" content="https://typeblitz.tech/assets/img/og-image.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <!-- Preconnect to external domains for faster resource loading -->
   <link rel="preconnect" href="https://typeblitz.tech" />
   <link rel="preconnect" href="https://typeblitz.netlify.app" />
@@ -43,6 +47,7 @@
   <link rel="canonical" href="https://typeblitz.tech" />
   <link rel="canonical" href="https://typeblitz.netlify.app" />
   <link rel="icon" type="image/x-icon" href="https://typeblitz.netlify.app/assets/img/TypeBlitz.ico" />
+  <link rel="icon" type="image/x-icon" href="https://typeblitz.tech/assets/img/TypeBlitz.ico" />
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="assets/preloader.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -69,6 +74,7 @@
     })(window, document, "script", "dataLayer", "GTM-NXNV6LTX");
   </script>
   <!-- End Google Tag Manager -->
+
 </head>
 
 <body style="--i: 0">
@@ -143,56 +149,6 @@
       </div>
     </div>
   </section>
-
-  <!-- Screenshots -->
-  <section id="screenshots" class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 mx-auto text-center">
-          <h2 class="mb-4">Software Preview</h2>
-          <div id="carouselExample" class="carousel slide fade-in" data-bs-ride="carousel" data-bs-interval="3000">
-            <div class="carousel-inner">
-              <!-- Carousel Items -->
-              <div class="carousel-item active">
-                <img src="assets/screenshots/1.png" class="d-block w-100" alt="Screenshot 1" />
-              </div>
-              <div class="carousel-item">
-                <img src="assets/screenshots/2.png" class="d-block w-100" alt="Screenshot 2" />
-              </div>
-              <div class="carousel-item">
-                <img src="assets/screenshots/3.png" class="d-block w-100" alt="Screenshot 3" />
-              </div>
-              <div class="carousel-item">
-                <img src="assets/screenshots/4.png" class="d-block w-100" alt="Screenshot 4" />
-              </div>
-              <div class="carousel-item">
-                <img src="assets/screenshots/5.png" class="d-block w-100" alt="Screenshot 5" />
-              </div>
-              <div class="carousel-item">
-                <img src="assets/screenshots/6.png" class="d-block w-100" alt="Screenshot 6" />
-              </div>
-              <div class="carousel-item">
-                <img src="assets/screenshots/7.png" class="d-block w-100" alt="Screenshot 6" />
-              </div>
-              <div class="carousel-item">
-                <img src="assets/screenshots/8.png" class="d-block w-100" alt="Screenshot 6" />
-              </div>
-            </div>
-            <!-- Carousel Controls -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-            <!-- End Carousel Controls -->
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
   <!-- Features Section -->
   <section id="features" class="py-5">
     <div class="container">
@@ -248,105 +204,138 @@
       </div>
     </div>
   </section>
-  <!-- Download Section -->
-  <!-- <section id="download" class="download-section bg-light">
-      <div class="container py-5">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <h2 class="section-heading mb-4">Download</h2>
-            <p class="section-subheading mb-5">
-              Access previous versions of TypeBlitz by clicking on the buttons
-              below.
-            </p>
+  <!-- Screenshots -->
+  <section id="screenshots" class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 mx-auto text-center">
+          <h2 class="mb-4">Software Preview</h2>
+          <div id="carouselExample" class="carousel slide fade-in" data-bs-ride="carousel" data-bs-interval="3000">
+            <div class="carousel-inner">
+              <!-- Carousel Items -->
+              <div class="carousel-item active">
+                <img src="assets/screenshots/1.png" class="d-block w-100" alt="Screenshot 1" />
+              </div>
+              <div class="carousel-item">
+                <img src="assets/screenshots/2.png" class="d-block w-100" alt="Screenshot 2" />
+              </div>
+              <div class="carousel-item">
+                <img src="assets/screenshots/3.png" class="d-block w-100" alt="Screenshot 3" />
+              </div>
+              <div class="carousel-item">
+                <img src="assets/screenshots/4.png" class="d-block w-100" alt="Screenshot 4" />
+              </div>
+              <div class="carousel-item">
+                <img src="assets/screenshots/5.png" class="d-block w-100" alt="Screenshot 5" />
+              </div>
+              <div class="carousel-item">
+                <img src="assets/screenshots/6.png" class="d-block w-100" alt="Screenshot 6" />
+              </div>
+              <div class="carousel-item">
+                <img src="assets/screenshots/7.png" class="d-block w-100" alt="Screenshot 6" />
+              </div>
+              <div class="carousel-item">
+                <img src="assets/screenshots/8.png" class="d-block w-100" alt="Screenshot 6" />
+              </div>
+            </div>
+            <!-- Carousel Controls -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+            <!-- End Carousel Controls -->
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-md-3">
-            <div class="card text-center mb-4">
-              <div class="card-body">
-                <h3 class="card-title">Version 2.5</h3>
-                <a href="production/files/v2.5.html" class="btn btn-primary"
-                  >Download Now</a
-                >
-              </div>
+      </div>
+    </div>
+  </section>
+  <!-- Download Section -->
+  <section id="download" class="download-section bg-light">
+    <div class="container py-5">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h2 class="section-heading mb-4">Download</h2>
+          <p class="section-subheading mb-5">
+            Access previous versions of TypeBlitz by clicking on the buttons
+            below.
+          </p>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-3">
+          <div class="card text-center mb-4">
+            <div class="card-body">
+              <h3 class="card-title">Version 2.5</h3>
+              <a href="production/files/v2.5.html" class="btn btn-primary">Download Now</a>
             </div>
           </div>
+        </div>
 
-          <div class="col-md-3">
-            <div class="card text-center mb-4">
-              <div class="card-body">
-                <h3 class="card-title">Version 2.4</h3>
-                <a href="production/files/v2.4.html" class="btn btn-primary"
-                  >Download Now</a
-                >
-              </div>
+        <div class="col-md-3">
+          <div class="card text-center mb-4">
+            <div class="card-body">
+              <h3 class="card-title">Version 2.4</h3>
+              <a href="production/files/v2.4.html" class="btn btn-primary">Download Now</a>
             </div>
           </div>
+        </div>
 
-          <div class="col-md-3">
-            <div class="card text-center mb-4">
-              <div class="card-body">
-                <h3 class="card-title">Version 2.2</h3>
-                <a href="production/files/v2.2.html" class="btn btn-primary"
-                  >Download Now</a
-                >
-              </div>
+        <div class="col-md-3">
+          <div class="card text-center mb-4">
+            <div class="card-body">
+              <h3 class="card-title">Version 2.2</h3>
+              <a href="production/files/v2.2.html" class="btn btn-primary">Download Now</a>
             </div>
           </div>
+        </div>
 
-          <div class="col-md-3">
-            <div class="card text-center mb-4">
-              <div class="card-body">
-                <h3 class="card-title">Version 2.0</h3>
-                <a href="production/files/v2.0.html" class="btn btn-primary"
-                  >Download Now</a
-                >
-              </div>
+        <div class="col-md-3">
+          <div class="card text-center mb-4">
+            <div class="card-body">
+              <h3 class="card-title">Version 2.0</h3>
+              <a href="production/files/v2.0.html" class="btn btn-primary">Download Now</a>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card text-center mb-4">
-              <div class="card-body">
-                <h3 class="card-title">Version 1.8</h3>
-                <a href="production/files/v1.8.html" class="btn btn-primary"
-                  >Download Now</a
-                >
-              </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center mb-4">
+            <div class="card-body">
+              <h3 class="card-title">Version 1.8</h3>
+              <a href="production/files/v1.8.html" class="btn btn-primary">Download Now</a>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card text-center mb-4">
-              <div class="card-body">
-                <h3 class="card-title">Version 1.6</h3>
-                <a href="production/files/v1.6.html" class="btn btn-primary"
-                  >Download Now</a
-                >
-              </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center mb-4">
+            <div class="card-body">
+              <h3 class="card-title">Version 1.6</h3>
+              <a href="production/files/v1.6.html" class="btn btn-primary">Download Now</a>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card text-center mb-4">
-              <div class="card-body">
-                <h3 class="card-title">Version 1.4 (Beta)</h3>
-                <a href="production/files/v1.4.html" class="btn btn-primary"
-                  >Download Now</a
-                >
-              </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center mb-4">
+            <div class="card-body">
+              <h3 class="card-title">Version 1.4 (Beta)</h3>
+              <a href="production/files/v1.4.html" class="btn btn-primary">Download Now</a>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card text-center mb-4">
-              <div class="card-body">
-                <h3 class="card-title">Version 1.2</h3>
-                <a href="production/files/v1.2.html" class="btn btn-primary"
-                  >Download Now</a
-                >
-              </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center mb-4">
+            <div class="card-body">
+              <h3 class="card-title">Version 1.2</h3>
+              <a href="production/files/v1.2.html" class="btn btn-primary">Download Now</a>
             </div>
           </div>
         </div>
       </div>
-    </section> -->
+    </div>
+  </section>
   <!-- Get in Touch Section -->
   <section class="contact" id="contact">
     <div class="max-width section-box">
@@ -399,24 +388,22 @@
     </div>
   </section>
   <!-- Popup Container -->
-  <div class="popup-container">
+  <div class="popup-container" id="popup">
     <div class="popup-content">
       <h2>New version available!</h2>
-      <p>
-        Click the button below to download the latest version of our
-        TypeBlitz.
-      </p>
+      <p>Click the button below to download the latest version of our TypeBlitz.</p>
       <a href="production\redirect.html" class="btn" target="_blank" rel="noopener noreferrer">Download Now</a>
-      <button class="close-btn">&times;</button>
+      <button class="close-btn" id="closePopup">&times;</button>
     </div>
   </div>
+
   <!-- Footer Section -->
   <footer class="bg-dark">
     <div class="container py-5">
       <div class="row">
         <!-- Footer Divider -->
         <div class="col-12">
-          <hr style="border-top: 1px solid #8c8c8c" />
+          <hr class="footer-divider" />
         </div>
         <!-- Social Media Icons Section -->
         <div class="col-md-6 text-center text-md-left">
@@ -435,7 +422,7 @@
           </p>
         </div>
         <div class="col-12">
-          <hr style="border-top: 1px solid #8c8c8c" />
+          <hr class="footer-divider" />
           <div class="text-center">
             <!-- Centered content -->
             <br />
@@ -451,6 +438,7 @@
       </div>
     </div>
   </footer>
+
   <!-- Scroll Button -->
   <button id="scrollBtn" type="button">
     <i class="fas fa-chevron-down"></i>
@@ -604,6 +592,13 @@
     // Preloader
     $(window).on("load", function () {
       $(".preloader").fadeOut("slow");
+    });
+  </script>
+  <script>
+    document.addEventListener('keydown', function (event) {
+      if (event.keyCode == 123) { // F12 key
+        event.preventDefault();
+      }
     });
   </script>
 
