--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
         </div>
       </div>
       <div class="row justify-content-center">
+        
         <div class="col-md-3">
           <div class="card text-center mb-4">
             <div class="card-body">
@@ -301,7 +302,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+
+        <!-- <div class="col-md-3">
           <div class="card text-center mb-4">
             <div class="card-body">
               <h3 class="card-title">Version 1.8</h3>
@@ -309,6 +311,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-md-3">
           <div class="card text-center mb-4">
             <div class="card-body">
@@ -317,6 +320,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-md-3">
           <div class="card text-center mb-4">
             <div class="card-body">
@@ -325,6 +329,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-md-3">
           <div class="card text-center mb-4">
             <div class="card-body">
@@ -332,7 +337,8 @@
               <a href="production/files/v1.2.html" class="btn btn-primary">Download Now</a>
             </div>
           </div>
-        </div>
+        </div> -->
+
       </div>
     </div>
   </section>
