--- a/index.html
+++ b/index.html
@@ -253,95 +253,48 @@
       </div>
     </div>
   </section>
-  <!-- Download Section -->
-  <section id="download" class="download-section bg-light">
-    <div class="container py-5">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h2 class="section-heading mb-4">Download</h2>
-          <p class="section-subheading mb-5">
-            Access previous versions of TypeBlitz by clicking on the buttons
-            below.
-          </p>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        
-        <div class="col-md-3">
-          <div class="card text-center mb-4">
-            <div class="card-body">
-              <h3 class="card-title">Version 2.5</h3>
-              <a href="production/files/v2.5.html" class="btn btn-primary">Download Now</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card text-center mb-4">
-            <div class="card-body">
-              <h3 class="card-title">Version 2.4</h3>
-              <a href="production/files/v2.4.html" class="btn btn-primary">Download Now</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card text-center mb-4">
-            <div class="card-body">
-              <h3 class="card-title">Version 2.2</h3>
-              <a href="production/files/v2.2.html" class="btn btn-primary">Download Now</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card text-center mb-4">
-            <div class="card-body">
-              <h3 class="card-title">Version 2.0</h3>
-              <a href="production/files/v2.0.html" class="btn btn-primary">Download Now</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- <div class="col-md-3">
-          <div class="card text-center mb-4">
-            <div class="card-body">
-              <h3 class="card-title">Version 1.8</h3>
-              <a href="production/files/v1.8.html" class="btn btn-primary">Download Now</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card text-center mb-4">
-            <div class="card-body">
-              <h3 class="card-title">Version 1.6</h3>
-              <a href="production/files/v1.6.html" class="btn btn-primary">Download Now</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card text-center mb-4">
-            <div class="card-body">
-              <h3 class="card-title">Version 1.4 (Beta)</h3>
-              <a href="production/files/v1.4.html" class="btn btn-primary">Download Now</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="card text-center mb-4">
-            <div class="card-body">
-              <h3 class="card-title">Version 1.2</h3>
-              <a href="production/files/v1.2.html" class="btn btn-primary">Download Now</a>
-            </div>
-          </div>
-        </div> -->
-
+<!-- Download Section -->
+<section id="download" class="download-section bg-light">
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h2 class="section-heading mb-4">Download</h2>
+        <p class="section-subheading mb-5">
+          Access previous versions of TypeBlitz by clicking on the buttons below.
+        </p>
       </div>
     </div>
-  </section>
+    <div class="row justify-content-center">
+      <div class="col-md-3">
+        <div class="card text-center mb-4">
+          <div class="card-body">
+            <h3 class="card-title">Version 2.6</h3>
+            <a href="production/files/v2.6.html" class="btn btn-primary">Download Now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card text-center mb-4">
+          <div class="card-body">
+            <h3 class="card-title">Version 2.4</h3>
+            <a href="production/files/v2.4.html" class="btn btn-primary">Download Now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card text-center mb-4">
+          <div class="card-body">
+            <h3 class="card-title">Older Versions</h3>
+            <a href="production/files/versions.html" class="btn btn-primary">Download Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
   <!-- Get in Touch Section -->
   <section class="contact" id="contact">
     <div class="max-width section-box">
