--- a/production/files/versions.html
+++ b/production/files/versions.html
@@ -52,7 +52,7 @@
           <h1>Oops!</h1>
           <h2>404 Not Found</h2>
           <div class="error-details">
-            Sorry, an error has occurred, Requested page not found!
+            Sorry, an error has occurred, Requested page not available!
           </div>
           <div class="error-actions">
             <a href="https://typeblitz.tech/" class="btn btn-primary btn-lg">Take Me Home</a>
