--- a/assets/contact.html
+++ b/assets/contact.html
@@ -95,7 +95,7 @@
             <textarea id="message" name="message" rows="5" required></textarea>
             <!-- Hidden fields and submit button -->
             <input type="hidden" name="_template" value="table" />
-            <input type="hidden" name="_subject" value="TypeBlitz: New Submission!" />
+            <input type="hidden" name="_subject" value="TypeBlitz Contact From App: New Submission!" />
             <input type="hidden" name="_captcha" value="false" />
             <input type="hidden" name="_next" value="https://typeblitz.tech/assets/success.html" />
             <button type="submit">Send Message</button>
