--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             experience to help you achieve your typing goals. Engage in dynamic typing exercises with instant feedback
             to
             track and improve your progress.</p>
-          <p>Made with ❤️ by <a href="https://sarwan6174.github.io/ellowdigitals.github.io/">EllowDigitals</a></p>
+          <p>Made with ❤️ by <a href="https://ellowdigitals.netlify.app/">EllowDigitals</a></p>
         </div>
       </div>
     </div>
