--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="TypeBlitz Official Website">
   <meta property="og:description" content="Enhance your typing skills with TypeBlitz">
-  <meta property="og:image" content="https://typeblitz.tech/assets/img/og-image.jpg">
+  <meta property="og:image" content="https://typeblitz.tech/assets/img/TypeBlitz-512.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
