--- a/production/latest/latest.html
+++ b/production/latest/latest.html
@@ -14,7 +14,7 @@
     <title>
         web_upodate_redict
     </title>
-    <meta http-equiv="refresh" content="1; url=https://typeblitz.netlify.app/production/files/v2.2.html">
+    <meta http-equiv="refresh" content="1; url=https://typeblitz.netlify.app/production/files/v2.6.html">
     <meta charset="UTF-8">
     <meta name="description" content="TypeBlitz: Web Update">
     <meta name="keywords" content="HTML, CSS, JavaScript">
@@ -29,7 +29,7 @@
         <p class="pf">
             The website has been built by
             <i class="fas fa-heart"></i>
-            <a href="https://sarwanboi.github.io/sarwanportfolio.github.io/" class="a1">
+            <a href="https://sarwan6174.github.io/sarwan.github.io" class="a1">
                 Sarwan Yadav
             </a>
         </p>
