--- a/assets/success.html
+++ b/assets/success.html
@@ -2,59 +2,63 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BN5JC7B3SH"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-BN5JC7B3SH');
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Success Page</title>
-    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
-        /* Success Message Styles */
-        .success-message {
-            display: none;
-            text-align: center;
-            margin: 5%;
-            padding: 2%;
-            background-color: #4CAF50;
-            color: white;
-            border-radius: 5px;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
         }
 
-        /* Loader Styles */
+        .success-message,
         .loader-wrapper {
             display: none;
+            text-align: center;
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        .success-message i {
+            font-size: 3em;
+            margin-bottom: 10px;
+        }
+
+        .loader-wrapper {
             background-color: rgba(255, 255, 255, 0.8);
-            /* Adjust the background color and opacity as needed */
-            z-index: 9999;
         }
 
         .loader {
             border: 8px solid #f3f3f3;
             border-top: 8px solid #3498db;
             border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            margin-top: -25px;
-            /* Half of the loader's height */
-            margin-left: -25px;
-            /* Half of the loader's width */
+            width: 60px;
+            height: 60px;
             animation: spin 1s linear infinite;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
         }
 
         @keyframes spin {
@@ -67,70 +71,47 @@
             }
         }
 
-        /* Media Queries for Responsive Design */
         @media only screen and (max-width: 600px) {
-
-            .success-message,
-            .loader-wrapper {
-                margin: 10%;
+            .success-message {
+                padding: 15px;
             }
-        }
 
-        @media only screen and (min-width: 601px) and (max-width: 1024px) {
-
-            .success-message,
-            .loader-wrapper {
-                margin: 7%;
+            .loader {
+                width: 50px;
+                height: 50px;
             }
         }
     </style>
 </head>
 
 <body>
-
-    <!-- Success Message -->
     <div class="success-message" id="successMessage">
         <i class="fas fa-check-circle"></i>
         <p>Your message has been sent successfully.</p>
     </div>
 
-    <!-- Loader Wrapper -->
     <div class="loader-wrapper" id="loaderWrapper">
         <div class="loader"></div>
     </div>
 
     <script>
-        // Redirect to the first link, and if it fails, try the second link
-        function redirectToFirstOrSecondLink() {
-            window.location.href = 'https://typeblitz.tech/'; // First link
-            setTimeout(function () {
-                window.location.href = 'https://typeblitz.netlify.app/'; // Second link
-            }, 5000); // Adjust the time as needed
-        }
+        document.addEventListener("DOMContentLoaded", () => {
+            const successMessage = document.getElementById('successMessage');
+            const loaderWrapper = document.getElementById('loaderWrapper');
 
-        // Show success message and then redirect after 4 to 5 seconds
-        document.addEventListener("DOMContentLoaded", function () {
-            var successMessage = document.getElementById('successMessage');
-            var loaderWrapper = document.getElementById('loaderWrapper');
-
-            // Display success message
             successMessage.style.display = 'block';
-
-            // Display loader for 4 to 5 seconds
-            setTimeout(function () {
+            setTimeout(() => {
                 successMessage.style.display = 'none';
-                loaderWrapper.style.display = 'block';
-
-                // Redirect after 4 to 5 seconds
-                setTimeout(function () {
-                    redirectToFirstOrSecondLink();
-                }, 4000); // Adjust the time as needed
-            }, 4000); // Adjust the time as needed
+                loaderWrapper.style.display = 'flex';
+                setTimeout(() => {
+                    window.location.href = 'https://typeblitz.tech/';
+                    setTimeout(() => {
+                        window.location.href = 'https://typeblitz.netlify.app/';
+                    }, 5000);
+                }, 4000);
+            }, 4000);
         });
     </script>
-    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
-            referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 </html>
