--- a/index.html
+++ b/index.html
@@ -169,6 +169,18 @@
               <div class="carousel-item">
                 <img src="assets/screenshots/2.png" class="d-block w-100" alt="Screenshot 2">
               </div>
+ <div class="carousel-item">
+                <img src="assets/screenshots/3.png" class="d-block w-100" alt="Screenshot 2">
+              </div>
+ <div class="carousel-item">
+                <img src="assets/screenshots/4.png" class="d-block w-100" alt="Screenshot 2">
+              </div>
+ <div class="carousel-item">
+                <img src="assets/screenshots/5.png" class="d-block w-100" alt="Screenshot 2">
+              </div>
+ <div class="carousel-item">
+                <img src="assets/screenshots/6.png" class="d-block w-100" alt="Screenshot 2">
+              </div>
               <!-- Add other carousel items here -->
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
