--- a/index.html
+++ b/index.html
@@ -169,19 +169,24 @@
               <div class="carousel-item">
                 <img src="assets/screenshots/2.png" class="d-block w-100" alt="Screenshot 2">
               </div>
- <div class="carousel-item">
+              <div class="carousel-item">
                 <img src="assets/screenshots/3.png" class="d-block w-100" alt="Screenshot 2">
               </div>
- <div class="carousel-item">
+              <div class="carousel-item">
                 <img src="assets/screenshots/4.png" class="d-block w-100" alt="Screenshot 2">
               </div>
- <div class="carousel-item">
+              <div class="carousel-item">
                 <img src="assets/screenshots/5.png" class="d-block w-100" alt="Screenshot 2">
               </div>
- <div class="carousel-item">
+              <div class="carousel-item">
                 <img src="assets/screenshots/6.png" class="d-block w-100" alt="Screenshot 2">
               </div>
-              <!-- Add other carousel items here -->
+              <div class="carousel-item">
+                <img src="assets/screenshots/7.png" class="d-block w-100" alt="Screenshot 2">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/screenshots/8.png" class="d-block w-100" alt="Screenshot 2">
+              </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
